--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/item-manager
+MONGO_URI=mongodb+srv://deeprajput392:AM34GLrulnL7XQSs@qunatumtask-db.fvhyj2l.mongodb.net/?retryWrites=true&w=majority&appName=item-manager
